fix contrast, spacing bugs

--- a/source/_docs/patterns/02-molecules/charts/org-chart/_org-chart.scss
+++ b/source/_docs/patterns/02-molecules/charts/org-chart/_org-chart.scss
@@ -96,7 +96,7 @@ Molecule: Charts - Org Chart
         &:hover,
         &:focus,
         &:active {
-          color: var(--dark-blue);
+          color: var(--white);
           outline-offset: var(--outline-offset--inset);
         }
         @media (forced-colors: active) {
